--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_session: ^0.1.1
+
 
   settings_ui: ^0.4.0
 
@@ -36,6 +38,8 @@ dependencies:
 
 
   google_maps_flutter: ^0.5.33
+  shared_preferences:
+
 
   fluttertoast:
 
