--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  firebase_auth:
+  flutter_rating_bar: ^3.2.0+1
+  provider: ^4.3.2+3
+  geolocator: ^6.1.13
   slide_button: ^0.2.8
   flutter_session: ^0.1.1
 
